[workspace]
resolver = "2"
members = [
  "apps/auth_admin_server",
  "apps/auth_api_server",
  "apps/auth_authn_server",
  "apps/auth_console_server",
  "apps/auth_poster",
  "crates/auth_database",
  "crates/auth_event",
  "crates/auth_internal",
  "crates/database_toolkit",
  "crates/guard",
  "crates/identity",
  "crates/new_type",
]
