[package]
name = "auth_admin_server"
version = "0.1.0"
edition = "2021"

[dependencies]
auth_database = { path = "../../crates/auth_database" }
auth_internal = { path = "../../crates/auth_internal" }
chrono = { version = "0.4.33", features = ["now", "serde"] }
database_toolkit = { path = "../../crates/database_toolkit" }
dotenvy = "0.15.7"
guard = { path = "../../crates/guard" }
identity = { path = "../../crates/identity" }
new_type = { path = "../../crates/new_type" }
reqwest = { version = "0.11.24", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["mysql", "macros", "chrono"] }
tokio = "1.36.0"
