[package]
name = "auth_poster"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ses = "1.15.0"
aws-sdk-sqs = "1.15.0"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
dotenvy = "0.15.7"
