[package]
name = "auth_poster"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
  "sqs",
] }
aws-sdk-ses = "1.15.0"
dotenvy = "0.15.7"
email_template = { path = "../../crates/email_template" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
lambda_runtime = "0.10.0"
futures = "0.3.30"
