[package]
name = "auth_admin_server"
version = "0.1.0"
edition = "2021"

[dependencies]
auth_database = { path = "../auth_database" }
database_toolkit = { path = "../database_toolkit" }
dotenvy = "0.15.7"
guard = { path = "../guard" }
identity = { path = "../identity" }
new_type = { path = "../new_type" }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = "1.36.0"
