[package]
name = "auth_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
auth_database = { path = "../auth_database" }
chrono = { version = "0.4.33", features = ["now", "serde"] }
database_toolkit = { path = "../database_toolkit" }
dotenvy = "0.15.7"
guard = { path = "../guard" }
identity = { path = "../identity" }
new_type = { path = "../new_type" }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["mysql", "macros", "chrono"] }
tokio = "1.36.0"
