[package]
name = "guard"
version = "0.1.0"
edition = "2021"

[dependencies]
auth_database = { path = "../auth_database" }
chrono = "0.4.34"
database_toolkit = { path = "../database_toolkit" }
new_type = { path = "../new_type" }
rocket = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7", features = ["macros", "chrono"] }
tokio = "1.36.0"
