[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = { package = "bs58", version = "0.5.0" }
chrono = { version = "0.4.33", features = ["now", "serde"] }
database_toolkit = { path = "../database_toolkit" }
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "v7"] }

[dev-dependencies]
serde_json = "1.0.113"
